# sensu-go-python

./: .gitignore  LICENSE  Makefile  README.rst  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/examples/: http_clients.py  resource_clients.py
src/sensu_go/: __init__.py  errors.py  typing.py
src/sensu_go/clients/: root.py
src/sensu_go/clients/http/: api_key.py  base.py  user_pass.py
src/sensu_go/clients/resource/: __init__.py  base.py  cluster.py  namespaced.py  operator.py
src/sensu_go/resources/: asset.py  base.py  check.py  cluster.py  entity.py  event.py  filter.py  handler.py  hook.py  mutator.py  namespace.py  namespaced.py  secret.py  secrets_provider.py  silence.py  user.py  v1.py  v2.py
tests/unit/clients/http/: test_api_key.py  test_base.py  test_user_pass.py
tests/unit/clients/resource/: test_operator.py
