[metadata]
name = sensu-go
url = https://github.com/xlab-steampunk/sensu-go-python
project_urls =
    Bug Tracker = https://github.com/xlab-steampunk/sensu-go-python/issues
    Release Management = https://github.com/xlab-steampunk/sensu-go-python/releases
    Discussions = https://github.com/xlab-steampunk/sensu-go-python/discussions
    Source Code = https://github.com/xlab-steampunk/sensu-go-python
description = Sensu Go Python client
long_description = file: README.rst
long_description_content_type = text/x-rst
author = XLAB Steampunk
author_email = steampunk@xlab.si
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Monitoring
keywords =
    monitoring

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = True

# These are required in actual runtime:
install_requires =
    requests < 3.0

[options.extras_require]
dev =
    black >= 21.4b2
    flake8
    mypy
    pytest >= 6, < 7
    pytest-mock
    requests-mock
    wheel

[options.packages.find]
where = src
